--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,31 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar color="#66ccff">
+    <ion-title>首页</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content class="buttons-components-page">
+  <ion-row *ngIf="spinner">
+    <ion-col text-center>
+        <ion-spinner></ion-spinner>
+    </ion-col>
+  </ion-row>
+
+  <ion-card *ngFor="let item of invites">
+    <div class="images">
+      <img src="{{item.ordpic}}" />
+    </div>
+      <ion-card-content>
+        <ion-card-title>
+            {{item.title}}
+        </ion-card-title>
+        <p>{{item.content}}</p>
+     </ion-card-content>
+      <ion-item>
+        <button ion-button clear item-start>{{item.uname}}</button>
+        <button ion-button clear item-end>{{item.destime}}</button>
+      </ion-item>
+  </ion-card>
 </ion-content>
+
+
